Fix bug where spinner is offcenter

--- a/src/components/channels/Projects.scss
+++ b/src/components/channels/Projects.scss
@@ -13,21 +13,28 @@
     }
 
     .spinner-container {
-        z-index: 100;
-        height: 100%;
-        transform-origin: bottom center;
-        transform: rotate(30deg);
-        // border: 1px solid blue;
+        // z-index: 100;
+        height: 0;
+        width: 80%;
+        padding-bottom: 80%;
+        margin-left: 10%;
+        margin-top: 10%;
+        transform-origin: center center;
+
+        // transform: rotate(30deg);
+
     }
 
     .spinner {
         // z-index: 100;
         position: absolute;
         height: 0;
-        padding-bottom: 60%;
-        width: 60%;
-        margin-left: 20%;
-        margin-top: 10%;
+        padding-bottom: 100%;
+        width: 100%;
+        // margin-left: 20%;
+
+        // margin-top: 9.8%; //might be causing transform to spin off center
+
         border-radius: 50%;
         background-color: none;
 
